[gd_scene load_steps=2 format=3 uid="uid://bknnh8cqfuu10"]

[ext_resource type="Script" path="res://scripts/entities_scripts/abilities_scripts/abilities_components/ability_despawn_component.gd" id="1_6maos"]

[node name="AbilityDespawnComponent" type="Node2D"]
script = ExtResource("1_6maos")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="DespawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
